<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_foreground_light">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp20"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tvFilterTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/filterTitle"
            android:textColor="@color/bright_foreground_dark"
            android:textSize="20sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/grey_app_color"/>
        <TextView
            android:id="@+id/tvFiterShowAll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp25"
            android:text="@string/filterShowAll"
            android:textColor="@color/bright_foreground_holo_dark"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/grey_app_color"/>
        <TextView
            android:id="@+id/tvFilterOnlySuitable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:text="@string/filterShowOnlySuitable"
            android:textColor="@color/bright_foreground_holo_dark"
            android:textSize="18sp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp1"
            android:layout_marginTop="@dimen/dp15"
            android:background="@color/grey_app_color"/>
        <TextView
            android:id="@+id/tvFiterMaybeNotSuitable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp20"
            android:layout_marginBottom="@dimen/dp15"
            android:text="@string/filterShowMaybeNot"
            android:textColor="@color/bright_foreground_holo_dark"
            android:textSize="18sp"/>
    </LinearLayout>
</LinearLayout>