<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bright_foreground_light">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp56"
        android:background="@color/green_app_color"
        android:orientation="horizontal"
        android:weightSum="7">

        <LinearLayout
            android:id="@+id/llGoToMenu"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="right">

            <ImageView
                android:layout_width="@dimen/dp25"
                android:layout_height="@dimen/dp30"
                android:layout_gravity="center"
                android:src="@drawable/navigation_icon" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4.8">

            <TextView
                android:id="@+id/hometitle"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/dp20"
                android:gravity="left|center_vertical"
                android:text="About Us"
                android:textColor="@color/background_light"
                android:textSize="25sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llBackArrow"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/dp32"
                android:layout_height="@dimen/dp32"
                android:layout_gravity="right|center"
                android:src="@drawable/backicon" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp400"
            android:layout_marginLeft="@dimen/dp20"
            android:layout_marginRight="@dimen/dp20"
            android:gravity="center|center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvAppName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp20"
                android:text="@string/app_name"
                android:textColor="@color/green_app_color"

                android:textSize="25sp" />

            <TextView
                android:id="@+id/tvAppVersion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp15"
                android:text="@string/appVersion"
                android:textColor="@color/bright_foreground_dark"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp5"
                android:text="@string/copyright"
                android:textColor="@color/bright_foreground_dark"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp50"></LinearLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center|center_vertical"
            android:layout_marginTop="5dp"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id"></com.google.android.gms.ads.AdView>
    </LinearLayout>
</LinearLayout>